test/language/module/compile_error/compile_error.tea
print("before") // expect: before

import "module" // expect error